@@ -31,6 +31,7 @@ features:
 - a print callback can now be specified for user expressions
 - added interval-evaluation of sine and cosine
 - add nonlinear optimization-based bound propagator solving two convex NLP relaxations for each variable
+- allow to create constraints of constraint handlers that don't need constraints
 
 parameters:
 - new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
